--- a/WpfExplorer.csproj
+++ b/WpfExplorer.csproj
@@ -149,7 +149,9 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Resource Include="Resources\Images\icon.png" />
+  </ItemGroup>
   <ItemGroup>
     <Resource Include="Resources\Images\go.png" />
     <Resource Include="Resources\Images\search.png" />
